// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a DENIED message 1`] = `
<div
  className="MuiContainer-root MuiContainer-maxWidthLg"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3"
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
      >
        <h1>
          rego.fyi
        </h1>
      </p>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9"
    >
      <div
        className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          className="MuiCardContent-root"
        >
          <p
            className="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextPrimary MuiTypography-gutterBottom"
          >
            ALLOWED
          </p>
          <p
            className="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders an ALLOWED message 1`] = `
<div
  className="MuiContainer-root MuiContainer-maxWidthLg"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3"
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
      >
        <h1>
          rego.fyi
        </h1>
      </p>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9"
    >
      <div
        className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          className="MuiCardContent-root"
        >
          <p
            className="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextPrimary MuiTypography-gutterBottom"
          >
            ALLOWED
          </p>
          <p
            className="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
          >
            response
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders default 1`] = `
<div
  className="MuiContainer-root MuiContainer-maxWidthLg"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3"
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
      >
        <h1>
          rego.fyi
        </h1>
      </p>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9"
    />
  </div>
</div>
`;
